--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ body {
 #header {
   background: url("../img/bg5.jpg") top no-repeat fixed;
   width: 100%;
-  height: 40%;
+  height: 60%;
   background-size: cover;
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
@@ -42,7 +42,8 @@ body {
   background: url("../img/tree-bg.png") center center no-repeat fixed;
   height: 60%;
   width: 100%;
-  background-size: cover; }
+  background-size: cover;
+  overflow: hidden; }
   #program-info .verse-box {
     margin: 55px auto;
     max-width: 580px;
