--- a/css/main.css
+++ b/css/main.css
@@ -12,10 +12,17 @@ body {
       color: inherit;
       text-decoration: none; }
 
+iframe {
+  display: block;
+  margin: 15px auto; }
+
+.gm-style .default-card {
+  display: none !important; }
+
 #header {
-  background: url("../img/bg5.jpg") top no-repeat fixed;
+  background: url("/img/bg5.jpg") top no-repeat fixed;
   width: 100%;
-  height: 65%;
+  height: 800px;
   background-size: cover;
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
@@ -39,7 +46,7 @@ body {
   display: block; }
 
 #program-info {
-  background: url("../img/tree-bg.png") center center no-repeat fixed;
+  background: url("/img/tree-bg.png") center center no-repeat fixed;
   height: 60%;
   width: 100%;
   background-size: cover;
@@ -47,8 +54,7 @@ body {
   #program-info .verse-box {
     margin: 55px auto;
     max-width: 580px;
-    height: 100%;
-    display: none; }
+    height: 100%; }
   #program-info .verse {
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
@@ -71,7 +77,7 @@ body {
   font-family: 'Lustria', sans-serif;
   font-size: 16px;
   text-align: center;
-  margin-top: 0px;
+  margin-top: 100px;
   line-height: 2;
   letter-spacing: 0.1em;
   height: 550px; }
@@ -134,7 +140,7 @@ body {
   height: 600px;
   font-family: 'Montserrat', sans-serif;
   text-tansform: uppercase;
-  background: url("../img/geometry.png") repeat fixed;
+  background: url("/img/geometry.png") repeat fixed;
   display: block; }
 
 #list, .set {
@@ -166,7 +172,7 @@ body {
   margin-left: 10px; }
 
 #faq {
-  height: 600px; }
+  height: 650px; }
   #faq i {
     margin-right: 5px; }
   #faq a {
@@ -241,8 +247,8 @@ body {
   margin-top: -20.5em; }
 
 .agenda > ul > .sat:after {
-  height: 55em;
-  margin-top: -55.5em; }
+  height: 65em;
+  margin-top: -65.5em; }
 
 .agenda > ul > .sun:after {
   height: 25em;
@@ -264,7 +270,7 @@ body {
   font-weight: 700; }
 
 #fin {
-  background: url("../img/ocean.jpg") repeat fixed;
+  background: url("/img/ocean.jpg") repeat fixed;
   color: #fff;
   font-size: 9px;
   height: 100px;
@@ -296,3 +302,7 @@ body {
     border-bottom: 1px solid #2cc17b !important; }
   .cta a:hover {
     opacity: 1 !important; }
+
+.vimeo {
+  max-width: 650px;
+  margin: -50px auto; }
